--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     alert('hehehe');
     alert('last na ni');
     alert('Merry Christmas');
+
+    function pic() {
+        alert('ayieehh HAAHAHAHAHAH');
+    }
 </script>
 <style>
     img {
@@ -28,7 +32,7 @@
             <h5>I LOVE YOU</h5>
     </div> -->
     <div class="pic" style="align-items: center;">
-        <img src="R.gif" alt="i love img">
+        <img onclick="pic()" src="R.gif" alt="i love img">
     </div>
 </body>
 </html>
