--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
 </script>
 <style>
     img {
-        width: 100%;
+        width: 60%;
         height: auto;
-}
+    }
+    .pic {
+        width: 80%;
+        height: auto;
+    }
 </style>
 <body>
-    <!-- <div style="text-align: center;">
-            <h5>I LOVE YOU</h5>
-    </div> -->
     <div class="pic" style="align-items: center;">
         <img onclick="pic()" src="R.gif" alt="i love img">
     </div>
